syntax = "proto3";

package compactor;

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message EchoRequest {
}

message EchoResponse {}

service CompactorService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
